--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<a href="#Home">Home</a>
 				<a href="roti.html">Roti</a>
 				<a href="kue.html">Kue</a>
-				<a href="login.html" class="tombol-biru">Keranjang</a>
+				<a href="keranjang.html" class="tombol-biru">Keranjang</a>
 
 			</div>
 		</div>
