--- a/index.html
+++ b/index.html
@@ -46,7 +46,18 @@
 			<img src="image/rotihome.jpg"/>
 		</section>
 
-		
+  <div class="wrapper">
+
+		<!---Untuk Kue--->
+		<section id="Home">
+			<img src="image/kuehome.jpg"/>
+			<div class="kolom">
+				<h2>Kue</h2>
+				<p> Kue yang dibuat dengan bahan pilihan dengan cita rasa yang dijamin istimewa
+					Serta varian rasa yang enak dan lezat dan tentu saja cocok menjadi santapan kalian. </p>
+				<p><a href="" class="tombol-pink">Lihat yuk!</a></p>
+			</div>
+		</section>		
 
 		<div id="Contact">
 			<div class="footer">
